# swos-portable

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
src/: CMakeLists.txt  stdinc.h
src/files/: file.cpp
src/menus/: mainMenu.cpp
src/util/: util.h
